; ModuleID = '/home/carl/AnghaBench/RetroArch/wii/libogc/libogc/extr_card.c___card_txhandler.c'
source_filename = "/home/carl/AnghaBench/RetroArch/wii/libogc/libogc/extr_card.c___card_txhandler.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 (i64, i64)* }

@CARD_ERROR_READY = common dso_local global i64 0, align 8
@EXI_CHANNEL_0 = common dso_local global i64 0, align 8
@EXI_CHANNEL_2 = common dso_local global i64 0, align 8
@cardmap = common dso_local global %struct.TYPE_3__* null, align 8
@CARD_ERROR_NOCARD = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i64, i64)* @__card_txhandler to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @__card_txhandler(i64 %0, i64 %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  %8 = alloca i32 (i64, i64)*, align 8
  %9 = alloca %struct.TYPE_3__*, align 8
  store i64 %0, i64* %4, align 8
  store i64 %1, i64* %5, align 8
  %10 = load i64, i64* @CARD_ERROR_READY, align 8
  store i64 %10, i64* %7, align 8
  store i32 (i64, i64)* null, i32 (i64, i64)** %8, align 8
  store %struct.TYPE_3__* null, %struct.TYPE_3__** %9, align 8
  %11 = load i64, i64* %4, align 8
  %12 = load i64, i64* @EXI_CHANNEL_0, align 8
  %13 = icmp ult i64 %11, %12
  br i1 %13, label %18, label %14

14:                                               ; preds = %2
  %15 = load i64, i64* %4, align 8
  %16 = load i64, i64* @EXI_CHANNEL_2, align 8
  %17 = icmp uge i64 %15, %16
  br i1 %17, label %18, label %19

18:                                               ; preds = %14, %2
  store i64 0, i64* %3, align 8
  br label %64

19:                                               ; preds = %14
  %20 = load %struct.TYPE_3__*, %struct.TYPE_3__** @cardmap, align 8
  %21 = load i64, i64* %4, align 8
  %22 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %20, i64 %21
  store %struct.TYPE_3__* %22, %struct.TYPE_3__** %9, align 8
  store i64 0, i64* %6, align 8
  %23 = load i64, i64* %4, align 8
  %24 = call i64 @EXI_Deselect(i64 %23)
  %25 = icmp eq i64 %24, 0
  br i1 %25, label %26, label %30

26:                                               ; preds = %19
  %27 = load i64, i64* %6, align 8
  %28 = load i64, i64* %7, align 8
  %29 = or i64 %28, %27
  store i64 %29, i64* %7, align 8
  br label %30

30:                                               ; preds = %26, %19
  %31 = load i64, i64* %4, align 8
  %32 = call i64 @EXI_Unlock(i64 %31)
  %33 = icmp eq i64 %32, 0
  br i1 %33, label %34, label %38

34:                                               ; preds = %30
  %35 = load i64, i64* %6, align 8
  %36 = load i64, i64* %7, align 8
  %37 = or i64 %36, %35
  store i64 %37, i64* %7, align 8
  br label %38

38:                                               ; preds = %34, %30
  %39 = load %struct.TYPE_3__*, %struct.TYPE_3__** %9, align 8
  %40 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %39, i32 0, i32 0
  %41 = load i32 (i64, i64)*, i32 (i64, i64)** %40, align 8
  store i32 (i64, i64)* %41, i32 (i64, i64)** %8, align 8
  %42 = load i32 (i64, i64)*, i32 (i64, i64)** %8, align 8
  %43 = icmp ne i32 (i64, i64)* %42, null
  br i1 %43, label %44, label %63

44:                                               ; preds = %38
  %45 = load %struct.TYPE_3__*, %struct.TYPE_3__** %9, align 8
  %46 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %45, i32 0, i32 0
  store i32 (i64, i64)* null, i32 (i64, i64)** %46, align 8
  %47 = load i64, i64* %6, align 8
  %48 = icmp ne i64 %47, 0
  br i1 %48, label %56, label %49

49:                                               ; preds = %44
  %50 = load i64, i64* %4, align 8
  %51 = call i64 @EXI_Probe(i64 %50)
  %52 = icmp eq i64 %51, 0
  br i1 %52, label %53, label %55

53:                                               ; preds = %49
  %54 = load i64, i64* @CARD_ERROR_NOCARD, align 8
  store i64 %54, i64* %7, align 8
  br label %55

55:                                               ; preds = %53, %49
  br label %58

56:                                               ; preds = %44
  %57 = load i64, i64* @CARD_ERROR_NOCARD, align 8
  store i64 %57, i64* %7, align 8
  br label %58

58:                                               ; preds = %56, %55
  %59 = load i32 (i64, i64)*, i32 (i64, i64)** %8, align 8
  %60 = load i64, i64* %4, align 8
  %61 = load i64, i64* %7, align 8
  %62 = call i32 %59(i64 %60, i64 %61)
  br label %63

63:                                               ; preds = %58, %38
  store i64 1, i64* %3, align 8
  br label %64

64:                                               ; preds = %63, %18
  %65 = load i64, i64* %3, align 8
  ret i64 %65
}

declare dso_local i64 @EXI_Deselect(i64) #1

declare dso_local i64 @EXI_Unlock(i64) #1

declare dso_local i64 @EXI_Probe(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
